--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,8 @@
     "ionic": "driftyco/ionic-bower#1.3.1"
   },
   "dependencies": {
-    "angularfire": "^2.0.2"
+    "angularfire": "^2.0.2",
+    "api-check": "^7.5.5",
+    "angular-formly": "^8.4.0"
   }
 }
