--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "angularfire": "^2.0.2",
     "api-check": "^7.5.5",
-    "angular-formly": "^8.4.0"
+    "angular-formly": "^8.4.0",
+    "angular-formly-templates-ionic": "^1.2.2"
   }
 }
